--- a/Rachit Tyagi,0221csml211.ipynb
+++ b/Rachit Tyagi,0221csml211.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,29 @@
     "\n",
     "window.after(5000, close_window)\n",
     "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column1    1\n",
+      "Column2    1\n",
+      "Column3    1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "data ={\"Column1\":[1,2,3,None,5],\"Column2\":[6,None,8,9,10],\"Column3\":[11,12,None,14,15]}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df.isnull().sum(axis=0))"
    ]
   }
  ],
