--- a/Rachit Tyagi,0221csml211.ipynb
+++ b/Rachit Tyagi,0221csml211.ipynb
@@ -160,10 +160,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counter():\n",
+    "    i = 1\n",
+    "    while (i <= 10):\n",
+    "        yield (i**2)\n",
+    "        i += 1\n",
+    "\n",
+    "\n",
+    "for i in counter():\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -201,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +268,13 @@
    "source": [
     "Write a program to display a menu on the menu bar.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
