--- a/Rachit Tyagi,0221csml211.ipynb
+++ b/Rachit Tyagi,0221csml211.ipynb
@@ -114,10 +114,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series from list\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "Series from arrays\n",
+      "0    0.5\n",
+      "1    0.8\n",
+      "2    1.2\n",
+      "3    1.5\n",
+      "4    2.0\n",
+      "dtype: float64\n",
+      "Series from dictionary\n",
+      "A    100\n",
+      "B    200\n",
+      "C    300\n",
+      "D    400\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "l_d = [10,20,30,40,50]\n",
+    "l_s = pd.Series(l_d)\n",
+    "print('Series from list')\n",
+    "print(l_s)\n",
+    "a_d = np.array([0.5,0.8,1.2,1.5,2.0])\n",
+    "a_s = pd.Series(a_d)\n",
+    "print('Series from arrays')\n",
+    "print(a_s)\n",
+    "d_d = {'A':100,'B':200,'C':300,'D':400}\n",
+    "d_s = pd.Series(d_d)\n",
+    "print('Series from dictionary')\n",
+    "print(d_s)"
+   ]
   },
   {
    "attachments": {},
@@ -296,20 +338,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3131104882.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    Write a program to draw colored shapes (line, rectangle, oval) on canvas.\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Write a program to draw colored shapes (line, rectangle, oval) on canvas."
+    "import tkinter as tk\n",
+    "from tkinter import messagebox\n",
+    "\n",
+    "def do_something():\n",
+    "    messagebox.showinfo(\"\",\"Doing something \")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exit_program():\n",
+    "    root.destroy()\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "\n",
+    "menu_bar = tk.Menu(root)\n",
+    "\n",
+    "file_menu = tk.Menu(menu_bar, tearoff=0)\n",
+    "file_menu.add_command(label=\"Do Something\", command=do_something)\n",
+    "file_menu.add_separator()\n",
+    "file_menu.add_command(label=\"Exit\", command=exit_program)\n",
+    "\n",
+    "menu_bar.add_cascade(label=\"File\", menu=file_menu)\n",
+    "\n",
+    "root.config(menu=menu_bar)\n",
+    "\n",
+    "root.mainloop()"
    ]
   },
   {
@@ -365,10 +422,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import messagebox\n",
+    "\n",
+    "def do_something():\n",
+    "    messagebox.showinfo(\"\",\"Doing something \")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exit_program():\n",
+    "    root.destroy()\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "\n",
+    "menu_bar = tk.Menu(root)\n",
+    "\n",
+    "file_menu = tk.Menu(menu_bar, tearoff=0)\n",
+    "file_menu.add_command(label=\"Do Something\", command=do_something)\n",
+    "file_menu.add_separator()\n",
+    "file_menu.add_command(label=\"Exit\", command=exit_program)\n",
+    "\n",
+    "menu_bar.add_cascade(label=\"File\", menu=file_menu)\n",
+    "\n",
+    "root.config(menu=menu_bar)\n",
+    "\n",
+    "root.mainloop()"
+   ]
   }
  ],
  "metadata": {
