--- a/Rachit Tyagi,0221csml211.ipynb
+++ b/Rachit Tyagi,0221csml211.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rachit Tyagi, 0221CSML211, AIML - C"
+    "Rachit Tyagi, 0221CSML211, AIML - C\n"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to create an arithmetic calculator using tkinter."
+    "Write a program to create an arithmetic calculator using tkinter.\n"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to create a window that disappears automatically after 5 seconds."
+    "Write a program to create a window that disappears automatically after 5 seconds.\n"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to count the number of missing values in each column"
+    "Write a program to count the number of missing values in each column\n"
    ]
   },
   {
@@ -98,8 +98,9 @@
     }
    ],
    "source": [
-    "import pandas as pd \n",
-    "data ={\"Column1\":[1,2,3,None,5],\"Column2\":[6,None,8,9,10],\"Column3\":[11,12,None,14,15]}\n",
+    "import pandas as pd\n",
+    "data = {\"Column1\": [1, 2, 3, None, 5], \"Column2\": [\n",
+    "    6, None, 8, 9, 10], \"Column3\": [11, 12, None, 14, 15]}\n",
     "df = pd.DataFrame(data)\n",
     "print(df.isnull().sum(axis=0))"
    ]
@@ -109,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a Program to create a series from a list, numpy array and dict."
+    "Write a Program to create a series from a list, numpy array and dict.\n"
    ]
   },
   {
@@ -147,15 +148,15 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "l_d = [10,20,30,40,50]\n",
+    "l_d = [10, 20, 30, 40, 50]\n",
     "l_s = pd.Series(l_d)\n",
     "print('Series from list')\n",
     "print(l_s)\n",
-    "a_d = np.array([0.5,0.8,1.2,1.5,2.0])\n",
+    "a_d = np.array([0.5, 0.8, 1.2, 1.5, 2.0])\n",
     "a_s = pd.Series(a_d)\n",
     "print('Series from arrays')\n",
     "print(a_s)\n",
-    "d_d = {'A':100,'B':200,'C':300,'D':400}\n",
+    "d_d = {'A': 100, 'B': 200, 'C': 300, 'D': 400}\n",
     "d_s = pd.Series(d_d)\n",
     "print('Series from dictionary')\n",
     "print(d_s)"
@@ -166,8 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Write a Pandas program to create a line plot of the opening, closing stock prices of Alphabet Inc. between two specific dates. Use the alphabet_stock_data.csv file to extract data"
+    "Write a Pandas program to create a line plot of the opening, closing stock prices of Alphabet Inc. between two specific dates. Use the alphabet_stock_data.csv file to extract data\n"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical Scatter Plot (using seaborn)."
+    "Categorical Scatter Plot (using seaborn).\n"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to generate square of 1,2,3,4,5,6,7,8,9,10 using generator"
+    "WAP to generate square of 1,2,3,4,5,6,7,8,9,10 using generator\n"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to display a menu on the menu bar."
+    "Write a program to display a menu on the menu bar.\n"
    ]
   },
   {
@@ -345,13 +345,14 @@
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
     "\n",
-    "def do_something():\n",
-    "    messagebox.showinfo(\"\",\"Doing something \")\n",
     "\n",
+    "def do_something():\n",
+    "    messagebox.showinfo(\"\", \"Doing something \")\n",
     "\n",
     "\n",
     "def exit_program():\n",
     "    root.destroy()\n",
+    "\n",
     "\n",
     "root = tk.Tk()\n",
     "\n",
@@ -374,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to draw colored shapes (line, rectangle, oval) on canvas."
+    "Write a program to draw colored shapes (line, rectangle, oval) on canvas.\n"
    ]
   },
   {
@@ -429,13 +430,14 @@
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
     "\n",
-    "def do_something():\n",
-    "    messagebox.showinfo(\"\",\"Doing something \")\n",
     "\n",
+    "def do_something():\n",
+    "    messagebox.showinfo(\"\", \"Doing something \")\n",
     "\n",
     "\n",
     "def exit_program():\n",
     "    root.destroy()\n",
+    "\n",
     "\n",
     "root = tk.Tk()\n",
     "\n",
