--- a/Rachit Tyagi,0221csml211.ipynb
+++ b/Rachit Tyagi,0221csml211.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +355,7 @@
     "\n",
     "\n",
     "root = tk.Tk()\n",
+    "root.title('Menu Bar')\n",
     "\n",
     "menu_bar = tk.Menu(root)\n",
     "\n",
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,6 +441,7 @@
     "\n",
     "\n",
     "root = tk.Tk()\n",
+    "root.title('Menu Bar')\n",
     "\n",
     "menu_bar = tk.Menu(root)\n",
     "\n",
