--- a/50 Python Program.ipynb
+++ b/50 Python Program.ipynb
@@ -1536,7 +1536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1600,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1608,7 +1608,17 @@
         "id": "mgPLgPbT5N0A",
         "outputId": "c259128f-4896-4ca1-fdde-ff01f8c0f65b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "simplified fraction = 2/3\n",
+            "simplified fraction = 3/7\n",
+            "simplified fraction = 2/7\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "\n",
